--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
+        "fabpot/goutte": "^3.2",
         "laravel/framework": "5.5.*",
+        "guzzlehttp/guzzle": "^6.1",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
