--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "fideloper/proxy": "~3.3",
         "fabpot/goutte": "^3.2",
-        "laravel/framework": "5.5.*",
+        "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.1",
-        "laravel/tinker": "~1.0"
+        "laravel/framework": "5.5.*",
+        "laravel/tinker": "~1.0",
+        "linecorp/line-bot-sdk": "^2.3"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
